# Streamer

./: .gitignore  CMakeLists.txt  compile.sh
include/: CMakeLists.txt  InputHandler.h  InputHandler.hpp  InputHandlerInterface.hpp  Logger.h  Pipeline.h  Pipeline.hpp  PipelineInterface.hpp  Thread.h  qlogger.h
src/: CMakeLists.txt  InputHandler.c  InputHandler.cpp  Pipeline.c  Pipeline.cpp  Thread.c  main.c  main.cpp
